# netbox-windows-dhcp

./: # Things still to do.md  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
netbox_windows_dhcp/: __init__.py  api_client.py  background_tasks.py  cert_utils.py  choices.py  constants.py  filtersets.py  forms.py  import_logic.py  models.py  navigation.py  search.py  signals.py  tables.py  template_content.py  urls.py  utils.py  views.py
netbox_windows_dhcp/api/: permissions.py  serializers.py  urls.py  views.py
netbox_windows_dhcp/migrations/: 0001_initial.py  0002_populate_option_codes.py  0003_dhcpplugin_settings_create_missing_prefixes.py  0003_dhcppluginsettings.py  0003_remove_exclusionrange_description.py  0004_dhcpplugin_settings_configurable_statuses.py  0004_dhcpserver_verify_ssl.py  0004_remove_dhcp_scope_custom_field.py  0005_dhcpserver_api_key_max_length.py  0005_dhcpserver_ca_cert.py  0005_sync_fields.py  0006_dhcppluginsettings_sync_ip_addresses.py  0006_dhcpscope_server.py  0006_v1_3_0.py  0007_dhcpplugin_settings_sync_active_scopes_only.py  0007_field_verbose_names.py  0008_dhcpplugin_settings_sync_job_timeout.py
netbox_windows_dhcp/psu/: dhcp_api_endpoints.ps1
netbox_windows_dhcp/templates/netbox_windows_dhcp/: dhcpcurrentmaintenance.html  dhcpexclusionrange.html  dhcpfailover.html  dhcpfailover_list.html  dhcpmaintenance_bulk.html  dhcpmaintenance_toggle.html  dhcpoptioncodedefinition.html  dhcpoptionvalue.html  dhcpscope.html  dhcpscope_list.html  dhcpserver.html  dhcpserver_certimport.html  dhcpserver_edit.html  dhcpserver_import.html  dhcpserver_list.html  prefix_dhcp_panel.html  settings.html
netbox_windows_dhcp/templates/netbox_windows_dhcp/inc/: ipaddress_dhcp_panel.html
netbox_windows_dhcp/tests/: base.py  query_counts.json  test_api.py  test_api_client.py  test_cert_utils.py  test_filtersets.py  test_import_logic.py  test_models.py  test_search.py  test_signals.py  test_sync.py  test_utils.py  test_views.py
psu/: README.md  dhcp_api_endpoints.ps1  setup_roles.ps1
