[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-windows-dhcp"
version = "1.0.0"
description = "NetBox plugin for full integration with Windows DHCP Server via PowerShell Universal"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/your-org/netbox-windows-dhcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_windows_dhcp*"]

[tool.setuptools.package-data]
netbox_windows_dhcp = [
    "templates/**/*.html",
]
