[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-windows-dhcp"
dynamic = ["version"]
description = "NetBox plugin for full integration with Windows DHCP Server via PowerShell Universal"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Avery Abbott", email = "averyhabbott@yahoo.com" },
]
maintainers = [
    { name = "Avery Abbott", email = "averyhabbott@yahoo.com" },
]
requires-python = ">=3.10"
# NetBox provides Django, DRF, etc. `requests` is imported directly by
# api_client.py for the PowerShell Universal HTTP API, so declare it explicitly.
dependencies = [
    "requests>=2.28.0",
]
keywords = [
    "netbox",
    "netbox-plugin",
    "dhcp",
    "windows",
    "plugin",
    "powershell",
    "ipam",
    "network",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/averyhabbott/netbox-windows-dhcp"
Repository = "https://github.com/averyhabbott/netbox-windows-dhcp"
"Bug Tracker" = "https://github.com/averyhabbott/netbox-windows-dhcp/issues"
Changelog = "https://github.com/averyhabbott/netbox-windows-dhcp/blob/main/CHANGELOG.md"

[project.entry-points."netbox.plugins"]
netbox_windows_dhcp = "netbox_windows_dhcp"

[tool.setuptools.dynamic]
version = { attr = "netbox_windows_dhcp.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_windows_dhcp*"]

[tool.setuptools.package-data]
netbox_windows_dhcp = [
    "templates/**/*.html",
    "psu/*.ps1",
]
